--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
+	implementation 'org.springframework.security:spring-security-test'
+
 	//MySQL
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
@@ -34,7 +38,7 @@ dependencies {
 	implementation 'org.liquibase:liquibase-core:4.20.0'
 
 	//jwt
-	implementation 'com.nimbusds:nimbus-jose-jwt:2.10.1'
+	implementation 'com.nimbusds:nimbus-jose-jwt:9.30.2'
 }
 
 test {
